# indiflightSupport

./: .gitignore  .gitmodules  Dockerfile  README.md  randomize.Dockerfile  remote.env  simplesim.Dockerfile
Cross-Compiler/: Dockerfile.cross  Dockerfile.cross.custom  README.md
Documentation/: DroneRace5Ghz.nmconnection  README.md
Documentation/Controllers/: highPass.py
Documentation/Controllers/estimationPipeline/: fxRLS.py  fxRotation.py  hoverAttitude.py  imuLocationRLS.py  motorRLS.py  newImuLS.py  yawEstimator.py
Documentation/Drones/: mateksys_4.4.2_custom_defaults.txt
Documentation/Drones/5inchRaceQuad/: MTKS_5inchRace_profile.txt  MTKS_5inchRace_profile_DUMMY.txt  MTKS_5inchRace_profile_DUMMY_NEWEST.txt  MTKS_5inchRace_profile_DUMMY_newG1G2.txt  MTKS_5inchRace_profile_ORIN.txt  MTKS_5inchRace_profile_ORIN_NEW.txt
Documentation/Drones/CineRat/: BTFL_cli_backup_20240914_122521_MATEKH743.txt  BTFL_cli_backup_20240914_153520_MATEKH743.txt  MTKS_CineRat_profile.txt  MTKS_CineRat_profile_RACE.txt  MTKS_CineRat_profile_inertia.txt  README.md
Documentation/Drones/CineRat/CineRatGcode/: BambuLabs_CineRatBumpers.3mf  BambuLabs_CineRatNoBumpers.3mf  CineRatNewPiAdaptor.3mf
Documentation/Drones/Trashcan/: HAMO_Trashcam.txt  HAMO_Trashcan.txt  dump_before_flashing_IROS.txt
Documentation/Orin/: 20240929_TillsSetup.md  AccessUSBFlightControllerViaWifi.txt  LogDownload.txt  SWD.txt  fan.txt  start_issues.txt
Documentation/Papers/: README.md  imav2024_figures.py  iros2024_figures.py  iros2024_video.py  requirements.txt
Documentation/Papers/IMAV2024/: IndiflightConfig.mk  IndiflightProfile.txt  README.md  generateFigures.py  simOveractuated.py
Documentation/Papers/IROS2024/: IndiflightProfile.txt  README.md  generateFigures.py  generateVideo.py  simRandomQuad.py
Documentation/Utils/: e2q.py  q2e.py
Documentation/Utils/indi/: genGMc.py  genGMc_5inchDummy.py  genGMc_IRIS.py  genGMc_RS.py  genGMc_RS2.py  genGMc_TC.py  getPD.py  requirements.txt
Groundstation/: README.md  keyInputs.py  remote.env  setpointSender.py  start.sh
Groundstation/Cross-Compiler/: Dockerfile.cross  Dockerfile.orin.cross  Dockerfile.orin.custom  Dockerfile.pi.cross  README.md  build.sh
Groundstation/UnifiedOptitrackClients/: .gitignore  CMakeLists.txt  README.md
Groundstation/UnifiedOptitrackClients/clients/: console_client.hpp  ivy_client.hpp  log_client.hpp  ros2_client.hpp  udp_client.hpp
Groundstation/UnifiedOptitrackClients/dockerfiles/: console.dockerfile  console_entrypoint.sh  ivy.dockerfile  ivy_entrypoint.sh  log.dockerfile  log_entrypoint.sh  ros2.dockerfile  ros2_entrypoint.sh  ros2px4.dockerfile  ros2px4_entrypoint.sh  udp.dockerfile  udp_entrypoint.sh
Groundstation/UnifiedOptitrackClients/include/: pose_calculations.hpp  unified_mocap_client.hpp
Groundstation/UnifiedOptitrackClients/scripts/: source_ros_and_msgs.sh
Groundstation/UnifiedOptitrackClients/src/: main.cpp  pose_calculations.cpp  unified_mocap_client.cpp
Groundstation/newMocapClient/: keyInputs.py  start.sh
Groundstation/newMocapClient/relay/: CMakeLists.txt  README.md
Groundstation/newMocapClient/relay/src/: relay.cpp  relay.service
Groundstation/newMocapClient/setpoint_sender/: setpointSender.py  track_test.py
Groundstation/oldMocapClient/: README.md  start.sh
Groundstation/oldMocapClient/log_downloader/: get_logs.sh  sendMSPoverTCP.py
Groundstation/oldMocapClient/optitrack_forwarder/: CMakeLists.txt  natnet2udp.py
Groundstation/oldMocapClient/optitrack_forwarder/ext/natnet3x/: README.md
Groundstation/oldMocapClient/optitrack_forwarder/natnet3x/: natnet2ivy.py
Groundstation/oldMocapClient/relay/: CMakeLists.txt  README.md
Groundstation/oldMocapClient/setpoint_sender/: setpointSender.py
Groundstation/relay/: CMakeLists.txt  README.md
Groundstation/relay/ext/pi-protocol/: .gitignore  Makefile  README.md  config.yaml
Groundstation/relay/ext/pi-protocol/msgs/: DUMMY_MESSAGE.yaml  EXTERNAL_POSE.yaml  FAKE_GPS.yaml  HIL_IN.yaml  HIL_OUT.yaml  IMU.yaml  KEYBOARD.yaml  POS_SETPOINT.yaml  VIO_POSE.yaml
Groundstation/relay/ext/pi-protocol/python/: generate.py  requirements.txt
Groundstation/relay/ext/pi-protocol/src/: pi-protocol.c
Groundstation/relay/ext/pi-protocol/templates/: pi-messages.c.j2  pi-messages.h.j2  pi-protocol.h.j2
Groundstation/relay/ext/pi-protocol/tests/: tester.c
Groundstation/relay/src/: relay.cpp
LogAnalysis/: README.md  blackbox-explorer-workspace.json  logPlotter.py  logViewer.py  noise.py
LogAnalysis/IMAV2024/: README.md  generateFigures.py
LogAnalysis/IROS2024/: .gitignore  IndiflightConfig.mk  IndiflightProfile.txt  README.md  generateFigures.py  generateVideo.py  randomize.Dockerfile  simRandomQuad.py
LogAnalysis/IROS2024/IROS2024_ExperimentData/: LOG00258.BFL  LOG00260.BFL  LOG00262.BFL  LOG00269.BFL  LOG00275.BFL  LOG00278.BFL
LogAnalysis/IROS2024/IROS2024_VideoShootData/: LOG00340.BFL
LogAnalysis/analyze_flight_data/: Analyze Flight Data.ipynb  SystemIdentification.ipynb  analyze.py
LogAnalysis/analyze_flight_data/quadcopter_animation/: animation.py
LogAnalysis/indiflightLogTools/: __init__.py  bfl2csv.py  estimators.py  indiflight_log_importer.py  requirements.txt
LogAnalysis/log_downloader/: get_logs.sh  remote.env  sendMSPoverTCP.py
Simulation/: README.md  abu_dhabi_test.py  exampleQuadSim.py  githash.Dockerfile  hil.Dockerfile  local.Dockerfile  requirements.txt  sil-githash.Dockerfile  sil-local.Dockerfile
Simulation/PyNDIflight/: __init__.py  crafts.py  helpers.py  interfaces.py  sim.py
Simulation/PyNDIflight/static/: app.js  crafts.js  package.json
Simulation/PyNDIflight/templates/: index.html
Simulation/Python/: README.md  crafts.py  helpers.py  interfaces.py  quadSILRandomize.py  quadSimExample.py  requirements.txt  sim.py
Simulation/Python/configs/: BTFL_cli_20240314_MATEKH743_CineRat_HoverAtt_NN.txt  SIL.txt
Simulation/Python/static/: app.js  crafts.js  package-lock.json
Simulation/config/: exampleINDIflightProfile.txt  mockupConfig.mk
remotes/: Dummy1.env  Dummy2.env  Orin1.env  Orin2.env
(+64 files in other folders)
